hphp/test/zend/good/Zend/tests/bug47714.php.expectf
Fatal error: Uncaught exception 'Exception' with message 'exception' in %s/bug47714.php:21
Stack trace:
#0 (): main()
#1 {main}
exception
